<resources>
    <string name="app_name">Lab7</string>
    <string name="artistname">artistname</string>
    <string name="name">Name</string>
    <string name="button">Button</string>
    <string name="rating_0_to_5">Rating (0 to 5)</string>
    <string name="add_track">Add track</string>
    <string name="tracks">Tracks</string>
    <string name="select_rating_0_to_5">Select Rating (0 to 5)</string>
    <string-array name="genres">

        <item>Pop</item>
        <item>Rock</item>
        <item>Hip-Hop</item>
        <item>Classics</item>
        <item>Samba</item>
        <item>Reggae</item>
        <item>K-Pop</item>
        <item>EDM</item>

    </string-array>
</resources>
