<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/track_artist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Kygo" />

    <EditText
        android:id="@+id/track_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/rating_0_to_5" />

    <SeekBar
        android:id="@+id/track_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:max="5"
        android:progress="1" />

    <Button
        android:id="@+id/track_add_btn"
        android:onClick="addTracks"
        android:text="@string/add_track"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/tracks"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/tracks_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>